{
  "version": 4,
  "terraform_version": "1.6.1",
  "serial": 736,
  "lineage": "270092b7-30a1-c90c-3dc1-44028acc7f7d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "public_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e465537a8c7ad039",
            "domain": "vpc",
            "id": "eipalloc-0e465537a8c7ad039",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-43-205-167-94.ap-south-1.compute.amazonaws.com",
            "public_ip": "43.205.167.94",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "test-eip"
            },
            "tags_all": {
              "Name": "test-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "test-instance-private-app-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c011873ab2445182",
            "arn": "arn:aws:ec2:ap-south-1:291621997224:instance/i-0d44b166c13a6563f",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d44b166c13a6563f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "test-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-025350ad7e821766e",
            "private_dns": "ip-10-0-4-223.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.4.223",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f73b45bc873b47a1",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0df400b5b7a0e7fd9"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03d090506bbeb5a52",
            "tags": {
              "Name": "Test-App-1"
            },
            "tags_all": {
              "Name": "Test-App-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0df400b5b7a0e7fd9"
            ]
          },
          "dependencies": [
            "aws_security_group.alb-sg",
            "aws_security_group.app-sg",
            "aws_security_group.jump-server-sg",
            "aws_subnet.private_subnet-1-app",
            "aws_vpc.test_vpc",
            "data.aws_ami.latest_ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "test-instance-private-app-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c011873ab2445182",
            "arn": "arn:aws:ec2:ap-south-1:291621997224:instance/i-06677fc55164c1b50",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06677fc55164c1b50",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "test-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0f0e8b3e0e88d1df8",
            "private_dns": "ip-10-0-5-42.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.5.42",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0bed7e358dda8f11d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0df400b5b7a0e7fd9"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-011525ea76828d0b1",
            "tags": {
              "Name": "Test-App-2"
            },
            "tags_all": {
              "Name": "Test-App-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0df400b5b7a0e7fd9"
            ]
          },
          "dependencies": [
            "aws_security_group.alb-sg",
            "aws_security_group.app-sg",
            "aws_security_group.jump-server-sg",
            "aws_subnet.private_subnet-2-app",
            "aws_vpc.test_vpc",
            "data.aws_ami.latest_ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "test-instance-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c011873ab2445182",
            "arn": "arn:aws:ec2:ap-south-1:291621997224:instance/i-07f615b6d9a30e27b",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07f615b6d9a30e27b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "test-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0feb1a684a5c297bd",
            "private_dns": "ip-10-0-1-81.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.81",
            "public_dns": "ec2-13-235-9-122.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.235.9.122",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-03896c95a10552f2e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0251d51477599294b"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0abfac6ed4b1e04e0",
            "tags": {
              "Name": "My-Jump-Server"
            },
            "tags_all": {
              "Name": "My-Jump-Server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0251d51477599294b"
            ]
          },
          "dependencies": [
            "aws_security_group.jump-server-sg",
            "aws_subnet.public_subnet-1",
            "aws_vpc.test_vpc",
            "data.aws_ami.latest_ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:291621997224:internet-gateway/igw-0d1db70af14ce6001",
            "id": "igw-0d1db70af14ce6001",
            "owner_id": "291621997224",
            "tags": {
              "Name": "test-igw"
            },
            "tags_all": {
              "Name": "test-igw"
            },
            "vpc_id": "vpc-0a65261b7a71c6e68"
          },
          "dependencies": [
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "test-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:291621997224:loadbalancer/app/test-lb/4aa8ff2221779788",
            "arn_suffix": "app/test-lb/4aa8ff2221779788",
            "desync_mitigation_mode": "defensive",
            "dns_name": "test-lb-1312215178.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:291621997224:loadbalancer/app/test-lb/4aa8ff2221779788",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "test-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-03e207be4f3657751"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0abfac6ed4b1e04e0"
              },
              {
                "subnet_id": "subnet-0d97b575180c90595"
              }
            ],
            "subnets": [
              "subnet-0abfac6ed4b1e04e0",
              "subnet-0d97b575180c90595"
            ],
            "vpc_id": "vpc-0a65261b7a71c6e68",
            "xff_header_processing_mode": "append",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "aws_security_group.alb-sg",
            "aws_subnet.public_subnet-1",
            "aws_subnet.public_subnet-2",
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "test-listner",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:291621997224:listener/app/test-lb/4aa8ff2221779788/39bceed59a564c59",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:291621997224:targetgroup/test-tg/7a599f28ecc6bec1",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:291621997224:listener/app/test-lb/4aa8ff2221779788/39bceed59a564c59",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:291621997224:loadbalancer/app/test-lb/4aa8ff2221779788",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.test-lb",
            "aws_lb_target_group.test-tg",
            "aws_security_group.alb-sg",
            "aws_subnet.public_subnet-1",
            "aws_subnet.public_subnet-2",
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "test-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:291621997224:targetgroup/test-tg/7a599f28ecc6bec1",
            "arn_suffix": "targetgroup/test-tg/7a599f28ecc6bec1",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:291621997224:targetgroup/test-tg/7a599f28ecc6bec1",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "test-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0a65261b7a71c6e68"
          },
          "dependencies": [
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "test-tg-attachment-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-south-1:291621997224:targetgroup/test-tg/7a599f28ecc6bec1-20231015070805212600000005",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:291621997224:targetgroup/test-tg/7a599f28ecc6bec1",
            "target_id": "i-0d44b166c13a6563f"
          },
          "dependencies": [
            "aws_instance.test-instance-private-app-1",
            "aws_lb_target_group.test-tg",
            "aws_security_group.alb-sg",
            "aws_security_group.app-sg",
            "aws_security_group.jump-server-sg",
            "aws_subnet.private_subnet-1-app",
            "aws_vpc.test_vpc",
            "data.aws_ami.latest_ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "test-tg-attachment-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-south-1:291621997224:targetgroup/test-tg/7a599f28ecc6bec1-20231015070805418000000006",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:291621997224:targetgroup/test-tg/7a599f28ecc6bec1",
            "target_id": "i-06677fc55164c1b50"
          },
          "dependencies": [
            "aws_instance.test-instance-private-app-2",
            "aws_lb_target_group.test-tg",
            "aws_security_group.alb-sg",
            "aws_security_group.app-sg",
            "aws_security_group.jump-server-sg",
            "aws_subnet.private_subnet-2-app",
            "aws_vpc.test_vpc",
            "data.aws_ami.latest_ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e465537a8c7ad039",
            "association_id": "eipassoc-0fb6d43295c512edd",
            "connectivity_type": "public",
            "id": "nat-0bafbd28173237c12",
            "network_interface_id": "eni-0b2f9d760160ca4f0",
            "private_ip": "10.0.1.104",
            "public_ip": "43.205.167.94",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0abfac6ed4b1e04e0",
            "tags": {
              "Name": "test-nat-gateway"
            },
            "tags_all": {
              "Name": "test-nat-gateway"
            }
          },
          "dependencies": [
            "aws_eip.public_eip",
            "aws_subnet.public_subnet-1",
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:291621997224:route-table/rtb-0eb6d706528fbe642",
            "id": "rtb-0eb6d706528fbe642",
            "owner_id": "291621997224",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0bafbd28173237c12",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "test-private-route-table_app"
            },
            "tags_all": {
              "Name": "test-private-route-table_app"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a65261b7a71c6e68"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.public_eip",
            "aws_nat_gateway.nat_gateway",
            "aws_subnet.public_subnet-1",
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:291621997224:route-table/rtb-08c49737fe7333499",
            "id": "rtb-08c49737fe7333499",
            "owner_id": "291621997224",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0bafbd28173237c12",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "test-private-route-table_db"
            },
            "tags_all": {
              "Name": "test-private-route-table_db"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a65261b7a71c6e68"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.public_eip",
            "aws_nat_gateway.nat_gateway",
            "aws_subnet.public_subnet-1",
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:291621997224:route-table/rtb-09ee2a7f5877019f8",
            "id": "rtb-09ee2a7f5877019f8",
            "owner_id": "291621997224",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d1db70af14ce6001",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "test-public-route-table"
            },
            "tags_all": {
              "Name": "test-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a65261b7a71c6e68"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_route_table_association_app_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ee0bb0713d1c22a8",
            "route_table_id": "rtb-0eb6d706528fbe642",
            "subnet_id": "subnet-03d090506bbeb5a52"
          },
          "dependencies": [
            "aws_eip.public_eip",
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.private_route_table_app",
            "aws_subnet.private_subnet-1-app",
            "aws_subnet.public_subnet-1",
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_route_table_association_app_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0484c63459f7de279",
            "route_table_id": "rtb-0eb6d706528fbe642",
            "subnet_id": "subnet-011525ea76828d0b1"
          },
          "dependencies": [
            "aws_eip.public_eip",
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.private_route_table_app",
            "aws_subnet.private_subnet-2-app",
            "aws_subnet.public_subnet-1",
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_route_table_association_app_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0335dd06ed19a18be",
            "route_table_id": "rtb-0eb6d706528fbe642",
            "subnet_id": "subnet-0d02e8b09358197cb"
          },
          "dependencies": [
            "aws_eip.public_eip",
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.private_route_table_app",
            "aws_subnet.private_subnet-3-app",
            "aws_subnet.public_subnet-1",
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_route_table_association_db_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-060a0e9c145a76f6e",
            "route_table_id": "rtb-08c49737fe7333499",
            "subnet_id": "subnet-0969c23364bf5dbcf"
          },
          "dependencies": [
            "aws_eip.public_eip",
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.private_route_table_db",
            "aws_subnet.private_subnet-1-db",
            "aws_subnet.public_subnet-1",
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_route_table_association_db_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e49228118dbdda4b",
            "route_table_id": "rtb-08c49737fe7333499",
            "subnet_id": "subnet-0d61015ddc9029673"
          },
          "dependencies": [
            "aws_eip.public_eip",
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.private_route_table_db",
            "aws_subnet.private_subnet-2-db",
            "aws_subnet.public_subnet-1",
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_route_table_association_db_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c274e556319ccc7e",
            "route_table_id": "rtb-08c49737fe7333499",
            "subnet_id": "subnet-0993fc1a880d44a61"
          },
          "dependencies": [
            "aws_eip.public_eip",
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.private_route_table_db",
            "aws_subnet.private_subnet-3-db",
            "aws_subnet.public_subnet-1",
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_route_table_association_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-014251cd26eeb9c98",
            "route_table_id": "rtb-09ee2a7f5877019f8",
            "subnet_id": "subnet-0abfac6ed4b1e04e0"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet-1",
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_route_table_association_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-080ab0a6f764c9046",
            "route_table_id": "rtb-09ee2a7f5877019f8",
            "subnet_id": "subnet-0d97b575180c90595"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet-2",
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_route_table_association_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f60c1f1473584a98",
            "route_table_id": "rtb-09ee2a7f5877019f8",
            "subnet_id": "subnet-09a064911699b8ee9"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet-3",
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:291621997224:security-group/sg-03e207be4f3657751",
            "description": "Security group for the app",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow necessary outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03e207be4f3657751",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP from public",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb-sg",
            "name_prefix": "",
            "owner_id": "291621997224",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a65261b7a71c6e68"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:291621997224:security-group/sg-0df400b5b7a0e7fd9",
            "description": "Security group for the app",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow necessary outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0df400b5b7a0e7fd9",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow ALB",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03e207be4f3657751"
                ],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "Allow SSH from jump server",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0251d51477599294b"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "app-sg",
            "name_prefix": "",
            "owner_id": "291621997224",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a65261b7a71c6e68"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb-sg",
            "aws_security_group.jump-server-sg",
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jump-server-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:291621997224:security-group/sg-0251d51477599294b",
            "description": "Security group for the jump server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow necessary outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0251d51477599294b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from specific IP",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "jump-server-sg",
            "name_prefix": "",
            "owner_id": "291621997224",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a65261b7a71c6e68"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet-1-app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:291621997224:subnet/subnet-03d090506bbeb5a52",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03d090506bbeb5a52",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "291621997224",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "test-private-subnet-1-app"
            },
            "tags_all": {
              "Name": "test-private-subnet-1-app"
            },
            "vpc_id": "vpc-0a65261b7a71c6e68"
          },
          "dependencies": [
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet-1-db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:291621997224:subnet/subnet-0969c23364bf5dbcf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.7.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0969c23364bf5dbcf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "291621997224",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "test-private-subnet-1-db"
            },
            "tags_all": {
              "Name": "test-private-subnet-1-db"
            },
            "vpc_id": "vpc-0a65261b7a71c6e68"
          },
          "dependencies": [
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet-2-app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:291621997224:subnet/subnet-011525ea76828d0b1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-011525ea76828d0b1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "291621997224",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "test-private-subnet-2-app"
            },
            "tags_all": {
              "Name": "test-private-subnet-2-app"
            },
            "vpc_id": "vpc-0a65261b7a71c6e68"
          },
          "dependencies": [
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet-2-db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:291621997224:subnet/subnet-0d61015ddc9029673",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.8.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d61015ddc9029673",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "291621997224",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "test-private-subnet-2-db"
            },
            "tags_all": {
              "Name": "test-private-subnet-2-db"
            },
            "vpc_id": "vpc-0a65261b7a71c6e68"
          },
          "dependencies": [
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet-3-app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:291621997224:subnet/subnet-0d02e8b09358197cb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d02e8b09358197cb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "291621997224",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "test-private-subnet-3-app"
            },
            "tags_all": {
              "Name": "test-private-subnet-3-app"
            },
            "vpc_id": "vpc-0a65261b7a71c6e68"
          },
          "dependencies": [
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet-3-db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:291621997224:subnet/subnet-0993fc1a880d44a61",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.0.9.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0993fc1a880d44a61",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "291621997224",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "test-private-subnet-3-db"
            },
            "tags_all": {
              "Name": "test-private-subnet-3-db"
            },
            "vpc_id": "vpc-0a65261b7a71c6e68"
          },
          "dependencies": [
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:291621997224:subnet/subnet-0abfac6ed4b1e04e0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0abfac6ed4b1e04e0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "291621997224",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "test-public-subnet-1"
            },
            "tags_all": {
              "Name": "test-public-subnet-1"
            },
            "vpc_id": "vpc-0a65261b7a71c6e68"
          },
          "dependencies": [
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:291621997224:subnet/subnet-0d97b575180c90595",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d97b575180c90595",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "291621997224",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "test-public-subnet-2"
            },
            "tags_all": {
              "Name": "test-public-subnet-2"
            },
            "vpc_id": "vpc-0a65261b7a71c6e68"
          },
          "dependencies": [
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:291621997224:subnet/subnet-09a064911699b8ee9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09a064911699b8ee9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "291621997224",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "test-public-subnet-3"
            },
            "tags_all": {
              "Name": "test-public-subnet-3"
            },
            "vpc_id": "vpc-0a65261b7a71c6e68"
          },
          "dependencies": [
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "test_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:291621997224:vpc/vpc-0a65261b7a71c6e68",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b513a6eaabe19665",
            "default_route_table_id": "rtb-0377fd6b92c93772d",
            "default_security_group_id": "sg-07a2402ebd3e00303",
            "dhcp_options_id": "dopt-09cb0ea75dcbd5902",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a65261b7a71c6e68",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0377fd6b92c93772d",
            "owner_id": "291621997224",
            "tags": {
              "Name": "TEST_VPC"
            },
            "tags_all": {
              "Name": "TEST_VPC"
            }
          }
        }
      ]
    }
  ]
}